# KafkaKubeML

./: README.md  helmfile.gotmpl  helmfile.yaml
dags/: dummy_dag.py  python_worker.py  streaming_ai_pipeline.py
k8s/: kafka-namespace.yaml
k8s/airflow/: airflow-dags-pvc.yaml  airflow-ingress.yaml  values.yaml
k8s/charts/stream-processor/: Chart.yaml  configmap.yaml  values.yaml
k8s/charts/stream-processor/templates/: configmap.yaml  deployment.yaml
k8s/charts/user-simulator/: Chart.yaml  configmap.yaml  values.yaml
k8s/charts/user-simulator/templates/: configmap.yaml  deployment.yaml  hpa.yaml  service.yaml
k8s/consumer/: consumer-pvc.yaml
k8s/dashboard/: recommended.yaml
k8s/ingress-nginx/: values.yaml
k8s/kafka/: kafka-cluster.yaml  kafkatopic-user-interactions.yaml
k8s/kafka/kraft/: kafka-cluster.yaml
k8s/stream-processor/: consumer-configmap.yaml  consumer-deployment.yaml
k8s/user-simulator/: generator-configmap.yaml  generator-deployment.yaml  generator-hpa.yaml  generator-pdb.yaml  generator-service.yaml
stream-processor/: Dockerfile  README.md  pyproject.toml  requirements.txt
stream-processor/src/stream_processor/: app.py  config.py  consumer.py  util.py  writer.py
stream-processor/tests/: test_consumer.py  test_consumer_build_and_run.py
user-simulator/: Dockerfile  README.md  generate.py  pyproject.toml  requirements.txt
user-simulator/src/user_simulator/: app.py  config.py  generator.py  kafka_client.py  main.py  metrics.py  producer.py
user-simulator/tests/: test_generator.py  test_kafka_client.py  test_main.py  test_smoke_config.py  test_smoke_generator.py  test_user_data.py
user-simulator/tests/integration/: conftest.py  test_kafka_end_to_end.py
