

# stream-processor/pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stream-processor"
version = "0.1.0"
description = "Kafka consumer that writes Parquet partitions"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "awesome-plant", email = "drakazaka@hotmail.com" }
]
dependencies = [
  "confluent-kafka==2.4.0",
  "pandas==2.2.2",
  "pyarrow==16.1.0",
  "python-dateutil==2.9.0.post0"
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["stream_processor"]
