[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "user-simulator"
version = "0.1.0"
description = "Fake user event generator for streaming demo. part of larger build done"
authors = [
    { name = "awesome-plant", email = "drakazaka@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faker",
    "kafka-python"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["user-simulator"]
