# pyproject.toml
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "user-simulator"
version = "0.1.0"
description = "Fake user event generator for streaming demo. part of larger build done"
authors = [
    { name = "awesome-plant", email = "drakazaka@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "confluent-kafka>=2.4.0",
  "Faker>=26.0.0",
  "prometheus-client>=0.20.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["user_simulator"]